wrapped image component in div, fixed issue of page scrolling being disabled after signing in or signing up

--- a/styles/DropMenu.module.css
+++ b/styles/DropMenu.module.css
@@ -2,7 +2,6 @@
    position: absolute;
    background-color: rgb(196, 142, 140);
    border-radius: 0.5rem;
-   top: 4.5rem;
    filter: drop-shadow(5px 5px 4px rgba(0, 0, 0, 0.5));
    display: flex;
    flex-direction: column;
@@ -19,13 +18,13 @@
 }
 
 @keyframes fadeIn {
-   from {opacity: 0; top: 3rem}
-   to {opacity: 1; top: 4.5rem}
+   from {opacity: 0; top: 50px}
+   to {opacity: 1; top: 85px}
 }
 
 @keyframes fadeOut {
-   from {opacity: 1; top: 4.5rem;}
-   to {opacity: 0; top: 3rem;}
+   from {opacity: 1; top: 85px;}
+   to {opacity: 0; top: 50px;}
 }
 
 
